@@ -395,13 +395,13 @@ setMethod("right_join", signature = c(x = "ANY"),
                 assay.type = assay.type,
                 missing_values = missing_values
                 )
-            # Create an object
-            tse <- do.call(FUN_constructor, args = args)
-            
             # If class is TreeSE, get trees and links, and reference sequences
             if( class == "TreeSummarizedExperiment" ){
                 tse_args <- .get_TreeSE_args(temp, tse_args)
             }
+            
+            # Create an object
+            tse <- do.call(FUN_constructor, args = args)
         }
     }
     # Add new line to, so that possible warning or  message has new line
@@ -928,10 +928,7 @@ setMethod("right_join", signature = c(x = "ANY"),
     assay <- .join_two_tables(assay1, assay2, join)
     
     # Convert into matrix
-    colnames <- colnames(assay)
     assay <- as.matrix(assay)
-    colnames(assay) <- colnames
-    ############# colnames are changed from col.name to col_name
     
     # Fill missing values
     assay[ is.na(assay) ] <- missing_values
@@ -962,6 +959,36 @@ setMethod("right_join", signature = c(x = "ANY"),
     
     # Merge rowdata
     rd <- .join_two_tables(rd1, rd2, join)
+    
+    # There might be duplicated rownames. This might occur when there are features
+    # with equal taxonomy data but merged datasets have some additional info
+    # that do not match with each other. --> collapse duplicated rows/features
+    # into one row.
+    dupl_rows <- rownames(rd)[ duplicated(rownames(rd)) ]
+    if( length(dupl_rows) > 0 ){
+        for( r in dupl_rows ){
+            # Get duplicated rows
+            temp <- rd[rownames(rd) %in% r, , drop = FALSE]
+            # Get uniwu rows
+            temp1 <- temp[1,]
+            temp2 <- temp[2,]
+            temp1 <- temp1[, !apply(temp1, 2, is.na), drop = FALSE]
+            temp2 <- temp2[, !apply(temp2, 2, is.na), drop = FALSE]
+            # Merge them together
+            temp <- merge(temp1, temp2, all = TRUE)
+            rownames(temp) <- r
+            # Remove the row from the original rowData
+            rd <- rd[!rownames(rd) %in% r, , drop = FALSE]
+            # Add the data back
+            rd[["rownames_merge_ID"]] <- rownames(rd)
+            temp[["rownames_merge_ID"]] <- rownames(temp)
+            rd <- merge(rd, temp, all = TRUE)
+            rownames(rd) <- rd[["rownames_merge_ID"]]
+            rd[["rownames_merge_ID"]] <- NULL
+        }
+        # Ensure that the rowData is DF
+        rd <- DataFrame(rd)
+    }
     
     # Get column indices that match with taxonomy ranks
     ranks_ind <- match( TAXONOMY_RANKS, colnames(rd) )
